--- a/functions/package.json
+++ b/functions/package.json
@@ -25,8 +25,11 @@
     "eslint-plugin-standard": "^4.0.0",
     "expect": "^24.0.0",
     "firebase": "^5.8.1",
+    "firebase-tools": "^6.3.0",
     "mocha": "^5.2.0"
   },
   "private": true,
-  "engines": {"node": "8"}
+  "engines": {
+    "node": "8"
+  }
 }
